fix some layout things and change impressum to imprint

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ div.white
 {
     background-color: white;
 }
+div.white
+{
+    background-color: white;
+    min-width: 260;
+}
 div.blue
 {
     background-color: rgb(0, 66, 128);
