setting up german translation + correct english version

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 30px auto;
-    width: 70%;
+    width: 75%;
     
     background-color: white;
     font-family:'Arial', 'Sans-Serif';
@@ -61,6 +61,13 @@ div.disclaimer
     font-weight: normal;
 }
 
+div table tr td
+{
+    font-size: 1.0em;
+    line-height: 1.0em;
+    font-weight: normal;
+}
+
 nav ul, footer ul, p ul {
     padding: 0px;
     list-style: none;
@@ -70,12 +77,24 @@ nav ul li, footer ul li, p ul li{
     display: inline;
     margin-right: 10px;
     margin-left: 10px;
+    color: rgb(255, 255, 255);
+    font-size: 0.7em;
+    font-weight: bold;
 }
 a.menulink{
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
 a.menulink:hover {
+    text-decoration: underline;
+}
+
+a.menulinklang{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: normal;
+}
+a.menulinklang:hover {
     text-decoration: underline;
 }
 
@@ -145,7 +164,7 @@ li.mysurname {
     color: rgb(0, 66, 128);
 }
 li.menulink {
-    font-size: 1.3em;
-    line-height: 1.4em;
+    font-size: 1.2em;
+    line-height: 1.3em;
     color: rgb(255, 255, 255);
 }
