Update contact data add spelling improvements

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ div.usedskills
     font-weight: normal;
     font-style: italic;
 }
-td.address
+div.address
 {
     font-size: 1.0em;
     line-height: 1.0em;
